# SergeantEngine

./: .gitignore
Sergeant3DEngine/: CMakeLists.txt  Sergeant3DEngine.cpp  Sergeant3DEngine.h
Sergeant3DEngine/Core/Camera/: camera.cpp  camera.h
Sergeant3DEngine/Core/Loader/: shader.cpp  shader.h
Sergeant3DEngine/Core/Mesh/: mesh.cpp  mesh.h
Sergeant3DEngine/Core/Shader/: shader.cpp  shader.h
Sergeant3DEngine/Core/Texture/: texture.cpp  texture.h
Sergeant3DEngine/Core/Transform/: transform.cpp  transform.h
Sergeant3DEngine/Core/Vertex/: vertex.cpp  vertex.h
Sergeant3DEngine/Core/Window/: window.cpp  window.h
Sergeant3DEngine/Resource/Triangle/: test.fs  test.vs
Sergeant3DEngine/Support/: helper.cpp  helper.h
